--- a/html/mb.html
+++ b/html/mb.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>
-    Dra. Manuela Calado Araújo
+    Dra. Marta Baltar
 </title>
 <meta charset="utf-8">
 <meta name="format-detection" content="telephone=no" />
@@ -28,7 +28,7 @@
     <header id="header">
     <div id="logo">
         <h1 class="fadeInDown">
-            <a href="index">
+            <a href="index.html">
                 <span class="second">Clínica</span>
                 <span class="first">Gynébe</span>
             </a>
@@ -45,45 +45,45 @@
         </div>
         <ul class="sf-menu">
             <li class="top">
-                <a href="index">Início</a>
+                <a href="index.html">Início</a>
                 <div class="dropdown dropdownIndex">
                     <ul>
                         <li>
-                            <i class="fas fa-user-md"></i><a href="index#wrapper2">A Nossa Missão</a>
+                            <i class="fas fa-user-md"></i><a href="index.html#wrapper2">A Nossa Missão</a>
                         </li>
                         <li>
-                            <i class="fas fa-user-friends"></i><a href="index#wrapper3">A Equipa</a>
+                            <i class="fas fa-user-friends"></i><a href="index.html#wrapper3">A Equipa</a>
                         </li>
                         <li>
-                            <i class="fas fa-hospital-user"></i><a href="index#wrapper4">Os Melhores Cuidados de
+                            <i class="fas fa-hospital-user"></i><a href="index.html#wrapper4">Os Melhores Cuidados de
                                 Saúde</a>
                         </li>
                     </ul>
                 </div>
             </li>
             <li class="top">
-                <a href="specialties">Especialidades</a>
+                <a href="specialties.html">Especialidades</a>
                 <div class="dropdown dropdownSpecialties">
                     <ul>
                         <li>
                             <i class="fas fa-female"></i>
-                            <a href="specialties#gyne">Ginecologia/Obstetrícia</a>
+                            <a href="specialties.html#gyne">Ginecologia/Obstetrícia</a>
                         </li>
                         <li>
                             <i class="fas fa-baby"></i>
-                            <a href="specialties#ped">Pediatria</a>
+                            <a href="specialties.html#ped">Pediatria</a>
                         </li>
                         <li>
                             <i class="fas fa-pills"></i>
-                            <a href="specialties#endo">Endocrinologia</a>
+                            <a href="specialties.html#endo">Endocrinologia</a>
                         </li>
                         <li>
                             <i class="fas fa-comment-medical"></i>
-                            <a href="specialties#psy">Psicologia</a>
+                            <a href="specialties.html#psy">Psicologia</a>
                         </li>
                         <li>
                             <i class="fas fa-utensils"></i>
-                            <a href="specialties#nut">Nutrição</a>
+                            <a href="specialties.html#nut">Nutrição</a>
                         </li>
                         <!-- <li>
                             <i class="fas fa-spa"></i>
@@ -93,52 +93,52 @@
                 </div>
             </li>
             <li class="top">
-                <a href="agreements">Convenções</a>
+                <a href="agreements.html">Convenções</a>
                 <div class="dropdown dropdownAgreements">
                     <ul>
                         <li><img src="../images/advanceCare_logo.png" alt="Advancecare Logo">
-                            <a href="agreements#advanceCare">AdvanceCare</a>
+                            <a href="agreements.html#advanceCare">AdvanceCare</a>
                         </li>
                         <li><img src="../images/allianz_logo.png" alt="Allianz Logo">
-                            <a href="agreements#allianz">Allianz</a>
+                            <a href="agreements.html#allianz">Allianz</a>
                         </li>
                         <li><img src="../images/fh_logo.png" alt="Future Healthcare Logo">
-                            <a href="agreements#furureHealth">Future Healthcare</a>
+                            <a href="agreements.html#furureHealth">Future Healthcare</a>
                         </li>
                         <li><img src="../images/medicare_logo.png" alt="Medicare Logo">
-                            <a href="agreements#medicare">Medicare</a>
+                            <a href="agreements.html#medicare">Medicare</a>
                         </li>
                         <li><img src="../images/medis_logo.png" alt="Médis Logo">
-                            <a href="agreements#medis">Médis</a>
+                            <a href="agreements.html#medis">Médis</a>
                         </li>
                         <li><img src="../images/rna_logo.png" alt="RNA Logo">
-                            <a href="agreements#rna">RNA</a>
+                            <a href="agreements.html#rna">RNA</a>
                         </li>
                         <li><img src="../images/sib_logo.png" alt="SAMS/SIB Logo">
-                            <a href="agreements#samsSib">SAMS/SIB</a>
+                            <a href="agreements.html#samsSib">SAMS/SIB</a>
                         </li>
                     </ul>
                 </div>
             </li>
             <li class="top">
-                <a href="gallery">Clínicas</a>
+                <a href="gallery.html">Clínicas</a>
                 <div class="dropdown dropdownGallery">
                     <ul>
-                        <li><i class="fas fa-images"></i><a href="gallery">Clínica do Porto</a></li>
-                        <li><i class="far fa-images"></i><a href="galleryST">Clínica de Santo Tirso</a>
+                        <li><i class="fas fa-images"></i><a href="gallery.html">Clínica do Porto</a></li>
+                        <li><i class="far fa-images"></i><a href="galleryST.html">Clínica de Santo Tirso</a>
                         </li>
                     </ul>
                 </div>
             </li>
             <li class="top">
-                <a href="contacts">Contactos</a>
+                <a href="contacts.html">Contactos</a>
                 <div class="dropdown dropdownContacts">
                     <ul>
                         <li><i class="fas fa-address-book"></i>
-                            <a href="contacts">Clínica do Porto</a>
+                            <a href="contacts.html">Clínica do Porto</a>
                         </li>
                         <li><i class="far fa-address-book"></i>
-                            <a href="contacts_santo_tirso">Clínica de Santo Tirso</a>
+                            <a href="contacts_santo_tirso.html">Clínica de Santo Tirso</a>
                         </li>
                     </ul>
                 </div>
@@ -171,15 +171,15 @@
         <section id="content" class="common">
             <div class="wrapper7">
                 <div class="heading1 fade-in">
-                    <h2>Dra. Manuela Calado Araújo</h2>
-                    <h3><strong>Especialidade:</strong> Ginecologia-Obstetrícia</h3>
+                    <h2>Dra. Marta Baltar</h2>
+                    <h3><strong>Especialidade:</strong> Psicologia</h3>
                 </div>
                 <div class="box8-wrapper1">
                     <div class="box8 fade-in">
-                        <img src="../images/mca.jpg" alt="">
+                        <img src="../images/profile.png" alt="">
                         <div class="doctorsDescription language">
                             <i class="fas fa-globe-europe"></i>
-                            <p><strong>Idiomas:</strong> Português, Inglês e Espanhol</p>
+                            <p><strong>Idiomas:</strong> Português</p>
                         </div>
                         <div class="doctorsDescription sick">
                             <i class="fas fa-clipboard-list"></i>
@@ -189,8 +189,7 @@
                         </div>
                         <div class="doctorsDescription apoint">
                             <i class="fas fa-stethoscope"></i>
-                            <p><strong>Consultas:</strong> Consulta Ginecologia - Consulta Obstetrícia - Teleconsulta
-                                Ginecologia</p>
+                            <p><strong>Consultas:</strong> </p>
                         </div>
                         <div class="doctorsDescription areas">
                             <i class="fas fa-file-medical-alt"></i>
@@ -203,13 +202,9 @@
                 <div class="schedule fade-in">
                     <h3>Horario:</h3>
                     <ul>
-                        <li><strong>Segunda-feira:</strong> 9h-14h</li>
-                        <li><strong>Terça-feira:</strong> 9h-20h</li>
-                        <li><strong>Quarta-feira:</strong> 14h-20h</li>
-                        <li><strong>Quinta-feira:</strong> Encerrado (exceto para Urgências)</li>
-                        <li><strong>Sexta-feira:</strong> 09h-20h</li>
-                        <li><strong>Sábado:</strong> Encerrado (exceto para Urgências)</li>
-                        <li><strong>Domingo:</strong> Encerrado</li>
+                        <li><strong>Terça-feira:</strong> 10h-13h (consulta online)</li>
+                        <li><strong>Quinta-feira:</strong> 16h-20h (consulta online)</li>
+                        <li><strong>Sexta-feira:</strong> 16h-20h (consulta presencial na Clínica do Porto)</li>
                     </ul>
                 </div>
                 <div class="box9-wrapper1">
@@ -228,32 +223,39 @@
                             <h4>Sociedades Científicas</h4>
                         </div>
                         <ul class="text-activity open">
-                            <li>2013 - Assistente graduado em Obstetrícia (grau de consultor)</li>
-                            <li>Desde 2003 - Diretora em Clinica Privada</li>
-                            <li>2000-2006 - Assistente em Obstetrícia, responsável pela Cirurgia Laparoscópica e
-                                Consulta de Alto Risco, Hospital de Braga</li>
-                            <li>1999-2000 - Assistente eventual de ginecologia e de obstetrícia, Hospital de Santo
-                                António, Porto</li>
-                            <li>1992-1998 - Internato complementar, Hospital de Santo António, Porto</li>
-                            <li>1990-1991 - Internato geral, Hospital de Santo António, Porto</li>
+                            <li>Exerce funções no domínio da Psicologia Clínica e da Saúde ao nível do
+                                diagnóstico psicométrico, acompanhamento psicopedagógico e psicoterapêutico
+                                de crianças, jovens e adultos no Gabinete de Psicologia Clínica (2008-2016).</li>
+                            <li>Desde 2006, é responsável pela Consulta de Psicologia na Clínica Gynébe. No
+                                âmbito da Consulta de Psicologia, e em colaboração com os profissionais que
+                                trabalham nesta clínica, tem desenvolvido actividades de avaliação/intervenção
+                                psicológica de crianças, jovens e adultos em situação de risco devido a problemas
+                                emocionais e/ou de aprendizagem, perturbações da parentalidade, problemas de
+                                infertilidade no casal, depressão pós-parto, problemas sexuais e conjugais,
+                                separação e divórcio.</li>
+                            <li>Exerceu funções no domínio da Psicologia Clínica Infantil e Juvenil ao nível do
+                                diagnóstico psicométrico, acompanhamento psicoterapêutico e psicopedagógico,
+                                na Clínica Médico-Cirúrgica do Marco de Canaveses (1989-1990).</li>
+                            <li>Participou no Programa Interministerial de Promoção do Sucesso Educativo no
+                                Ensino Básico (Ministério da Educação), sendo as modalidades de actuação e sua
+                                avaliação no domínio da dinamização psicopedagógica da comunidade, dos
+                                agentes de ensino, dos pais e dos alunos (1988-1992).</li>
+                            <li>Formação de Especialidade na área de Psicoterapia: 2o ano do Curso de Pós-
+                                Graduação pela Sociedade Portuguesa de Psicologia Clínica (1991-1993).</li>
                         </ul>
                         <ul class="text-formation">
-                            <li>2004 - Certificado de competência em Ecografia Fetal, Fetal Medicine Foundation
-                                Licenciatura em Medicina</li>
+                            <li>Doutoramento em Psicologia pela Faculdade de Psicologia e de Ciências da
+                                Educação da Universidade do Porto, em 2005.</li>
+                            <li>Mestrado em Psicopatologia e Psicologia Clínica pelo Instituto Superior de
+                                Psicologia Aplicada, em 1998.</li>
+                            <li>Licenciatura em Psicologia pela Faculdade de Psicologia e de Ciências da
+                                Educação da Universidade de Lisboa.</li>
                         </ul>
                         <ul class="text-science">
-                            <li>2004 - Assistente convidada em Obstetrícia, Faculdade de Medicina de Braga</li>
-                            <li>1994-1996 - Assistente convidada de Ginecologia e de Obstetrícia, Instituto de Ciências
-                                Biomédicas Abel Salazar (ICBAS)</li>
-                            <li>Publicações em revistas científicas</li>
-                            <li>Participações em trabalhos de investigação clinica e elaboração de protocolo</li>
-                            <li>Co-orientação em tese de doutoramento</li>
+                            <li>Vários trabalhos de investigação, comunicações e publicações de âmbito nacional.</li>
                         </ul>
                         <ul class="text-sociaty">
-                            <li>Sociedade Portuguesa de Obstetrícia e Medicina Materno Fetal</li>
-                            <li>Sociedade Portuguesa de Ginecologia</li>
-                            <li>Sociedade Portuguesa da Medicina da Reprodução</li>
-                            <li>Associação Portuguesa de Neurourologia e Uroginecologia</li>
+
                         </ul>
                     </div>
                 </div>
@@ -276,21 +278,23 @@
         </div>
         <nav>
             <ul>
-                <li class="fade-in"><a href="index">Início</a></li>
-                <li class="fade-in"><a href="specialties">Especialidades</a></li>
-                <li class="fade-in"><a href="agreements">Convenções</a></li>
-                <li class="fade-in"><a href="contacts">Contactos</a></li>
+                <li class="fade-in"><a href="index.html">Início</a></li>
+                <li class="fade-in"><a href="specialties.html">Especialidades</a></li>
+                <li class="fade-in"><a href="agreements.html">Convenções</a></li>
+                <li class="fade-in"><a href="contacts.html">Contactos</a></li>
             </ul>
         </nav>
     </div>
     <div class="privacy-block fade-in">
-        <a href="index">Clínica Gynébe</a> &copy; <span id="copyright-year">2021</span>. <a href="privacy">Política de
+        <a href="index.html">Clínica Gynébe</a> &copy; <span id="copyright-year">2021</span>. <a
+            href="privacy.html">Política de
             Privacidade </a><br><a>Design by Francisco Araújo</a>
     </div>
 </footer>
             <script src="../js/app.js"></script>
             <script src="../js/intersectionObservers.js"></script>
             <script src="../js/headerNavbar.js"></script>
+            <script src="../js/headerNavbarButtons.js"></script>
             <script src="../js/cv.js"></script>
 </body>
 
