--- a/html/ac.html
+++ b/html/ac.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>
-    Contactos
+    Dra. Ana Carriço
 </title>
 <meta charset="utf-8">
 <meta name="format-detection" content="telephone=no" />
@@ -19,8 +19,6 @@
 <link rel="stylesheet" href="../css/styles.css">
 <!-- endbuild -->
 <script src="https://kit.fontawesome.com/9e78371ef2.js" crossorigin="anonymous"></script>
-        <script src='https://api.mapbox.com/mapbox-gl-js/v2.1.1/mapbox-gl.js'></script>
-        <link href='https://api.mapbox.com/mapbox-gl-js/v2.1.1/mapbox-gl.css' rel='stylesheet' />
 </head>
 
 <body>
@@ -30,7 +28,7 @@
     <header id="header">
     <div id="logo">
         <h1 class="fadeInDown">
-            <a href="index">
+            <a href="index.html">
                 <span class="second">Clínica</span>
                 <span class="first">Gynébe</span>
             </a>
@@ -47,45 +45,45 @@
         </div>
         <ul class="sf-menu">
             <li class="top">
-                <a href="index">Início</a>
+                <a href="index.html">Início</a>
                 <div class="dropdown dropdownIndex">
                     <ul>
                         <li>
-                            <i class="fas fa-user-md"></i><a href="index#wrapper2">A Nossa Missão</a>
+                            <i class="fas fa-user-md"></i><a href="index.html#wrapper2">A Nossa Missão</a>
                         </li>
                         <li>
-                            <i class="fas fa-user-friends"></i><a href="index#wrapper3">A Equipa</a>
+                            <i class="fas fa-user-friends"></i><a href="index.html#wrapper3">A Equipa</a>
                         </li>
                         <li>
-                            <i class="fas fa-hospital-user"></i><a href="index#wrapper4">Os Melhores Cuidados de
+                            <i class="fas fa-hospital-user"></i><a href="index.html#wrapper4">Os Melhores Cuidados de
                                 Saúde</a>
                         </li>
                     </ul>
                 </div>
             </li>
             <li class="top">
-                <a href="specialties">Especialidades</a>
+                <a href="specialties.html">Especialidades</a>
                 <div class="dropdown dropdownSpecialties">
                     <ul>
                         <li>
                             <i class="fas fa-female"></i>
-                            <a href="specialties#gyne">Ginecologia/Obstetrícia</a>
+                            <a href="specialties.html#gyne">Ginecologia/Obstetrícia</a>
                         </li>
                         <li>
                             <i class="fas fa-baby"></i>
-                            <a href="specialties#ped">Pediatria</a>
+                            <a href="specialties.html#ped">Pediatria</a>
                         </li>
                         <li>
                             <i class="fas fa-pills"></i>
-                            <a href="specialties#endo">Endocrinologia</a>
+                            <a href="specialties.html#endo">Endocrinologia</a>
                         </li>
                         <li>
                             <i class="fas fa-comment-medical"></i>
-                            <a href="specialties#psy">Psicologia</a>
+                            <a href="specialties.html#psy">Psicologia</a>
                         </li>
                         <li>
                             <i class="fas fa-utensils"></i>
-                            <a href="specialties#nut">Nutrição</a>
+                            <a href="specialties.html#nut">Nutrição</a>
                         </li>
                         <!-- <li>
                             <i class="fas fa-spa"></i>
@@ -95,52 +93,52 @@
                 </div>
             </li>
             <li class="top">
-                <a href="agreements">Convenções</a>
+                <a href="agreements.html">Convenções</a>
                 <div class="dropdown dropdownAgreements">
                     <ul>
                         <li><img src="../images/advanceCare_logo.png" alt="Advancecare Logo">
-                            <a href="agreements#advanceCare">AdvanceCare</a>
+                            <a href="agreements.html#advanceCare">AdvanceCare</a>
                         </li>
                         <li><img src="../images/allianz_logo.png" alt="Allianz Logo">
-                            <a href="agreements#allianz">Allianz</a>
+                            <a href="agreements.html#allianz">Allianz</a>
                         </li>
                         <li><img src="../images/fh_logo.png" alt="Future Healthcare Logo">
-                            <a href="agreements#furureHealth">Future Healthcare</a>
+                            <a href="agreements.html#furureHealth">Future Healthcare</a>
                         </li>
                         <li><img src="../images/medicare_logo.png" alt="Medicare Logo">
-                            <a href="agreements#medicare">Medicare</a>
+                            <a href="agreements.html#medicare">Medicare</a>
                         </li>
                         <li><img src="../images/medis_logo.png" alt="Médis Logo">
-                            <a href="agreements#medis">Médis</a>
+                            <a href="agreements.html#medis">Médis</a>
                         </li>
                         <li><img src="../images/rna_logo.png" alt="RNA Logo">
-                            <a href="agreements#rna">RNA</a>
+                            <a href="agreements.html#rna">RNA</a>
                         </li>
                         <li><img src="../images/sib_logo.png" alt="SAMS/SIB Logo">
-                            <a href="agreements#samsSib">SAMS/SIB</a>
+                            <a href="agreements.html#samsSib">SAMS/SIB</a>
                         </li>
                     </ul>
                 </div>
             </li>
             <li class="top">
-                <a href="gallery">Clínicas</a>
+                <a href="gallery.html">Clínicas</a>
                 <div class="dropdown dropdownGallery">
                     <ul>
-                        <li><i class="fas fa-images"></i><a href="gallery">Clínica do Porto</a></li>
-                        <li><i class="far fa-images"></i><a href="galleryST">Clínica de Santo Tirso</a>
+                        <li><i class="fas fa-images"></i><a href="gallery.html">Clínica do Porto</a></li>
+                        <li><i class="far fa-images"></i><a href="galleryST.html">Clínica de Santo Tirso</a>
                         </li>
                     </ul>
                 </div>
             </li>
             <li class="top">
-                <a href="contacts">Contactos</a>
+                <a href="contacts.html">Contactos</a>
                 <div class="dropdown dropdownContacts">
                     <ul>
                         <li><i class="fas fa-address-book"></i>
-                            <a href="contacts">Clínica do Porto</a>
+                            <a href="contacts.html">Clínica do Porto</a>
                         </li>
                         <li><i class="far fa-address-book"></i>
-                            <a href="contacts_santo_tirso">Clínica de Santo Tirso</a>
+                            <a href="contacts_santo_tirso.html">Clínica de Santo Tirso</a>
                         </li>
                     </ul>
                 </div>
@@ -171,34 +169,65 @@
                           CONTENT
 =========================================================-->
         <section id="content" class="common">
-            <div class="wrapper1 wrapper1__inset3">
-                <div class="heading1 fadeIn">
-                    <h2>Clínica Gynébe do Porto</h2>
+            <div class="wrapper7">
+                <div class="heading1 fade-in">
+                    <h2>Dra. Ana Carriço</h2>
+                    <h3><strong>Especialidade:</strong> Cardiologia Pediátrica</h3>
                 </div>
-                <div id="map"></div>
-                <address class="our-address fadeIn">
-                    <a href="https://www.google.com/maps/dir/?api=1&travelmode=driving&layer=traffic&destination=41.14735259875789,-8.620945015926148"
-                        target="_blank"><span>Rua D. Manuel II 33, 4º sala 44,<br />4050-345 Porto.</span></a>
-                </address>
-                <address class="contacts-address fadeIn">
-                    <span class="wrapper-info"><span class="wide">Telefone:</span><a href="tel:00351225432135"> +351
-                            225 432 135/6</a></span>
-                    <span class="wrapper-info"><span class="wide">Fax:</span> +351 225 432 209</span>
-                    <span class="wrapper-info">E-mail:
-                        <a href="mailto:geral@clinicagynebe.com.pt" class="simple-link">geral@clinicagynebe.com.pt</a>
-                    </span>
-                </address>
-                <div class="schedule fade-in">
-                    <h3>Horario:</h3>
-                    <ul>
-                        <li><strong>Segunda-feira:</strong> 9h-14h</li>
-                        <li><strong>Terça-feira:</strong> 9h-20h</li>
-                        <li><strong>Quarta-feira:</strong> 14h-20h</li>
-                        <li><strong>Quinta-feira:</strong> Encerrado (exceto para Urgências)</li>
-                        <li><strong>Sexta-feira:</strong> 09h-20h</li>
-                        <li><strong>Sábado:</strong> Encerrado (exceto para Urgências)</li>
-                        <li><strong>Domingo:</strong> Encerrado</li>
-                    </ul>
+                <div class="box8-wrapper1">
+                    <div class="box8 fade-in">
+                        <img src="../images/profile.png" alt="">
+                        <div class="doctorsDescription language">
+                            <i class="fas fa-globe-europe"></i>
+                            <p><strong>Idiomas:</strong> Português e Inglês</p>
+                        </div>
+                        <div class="doctorsDescription sick">
+                            <i class="fas fa-clipboard-list"></i>
+                            <p><strong>Doenças:</strong> </p>
+                        </div>
+                        <div class="doctorsDescription apoint">
+                            <i class="fas fa-stethoscope"></i>
+                            <p><strong>Exames:</strong> Ecocardiografia Fetal e Eco-Doppler Cardíaco Fetal</p>
+                        </div>
+                        <div class="doctorsDescription areas">
+                            <i class="fas fa-file-medical-alt"></i>
+                            <p><strong>Áreas de Diferenciação:</strong> medicina fetal e ecocardiografia</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="box9-wrapper1">
+                    <div class="box9 fade-in">
+                        <div class="box9-background"></div>
+                        <div class="activity">
+                            <h4>Atividade Clínica</h4>
+                        </div>
+                        <div class="formation">
+                            <h4>Formação Académica</h4>
+                        </div>
+                        <div class="science">
+                            <h4>Atividade Científica</h4>
+                        </div>
+                        <div class="sociaty">
+                            <h4>Sociedades Científicas</h4>
+                        </div>
+                        <ul class="text-activity open">
+                            <li>Assistente Hospitalar no Hospital de Vila Nova de Gaia (desde 2008)</li>
+                            <li>Assistente Hospitalar Eventual no Hospital de São João, Porto (2004-2008)</li>
+                            <li>Cardiologista pediátrica no Hospital da Luz Arrábida</li>
+                            <li>Internato Complementar no Hospital de São João, Porto (1999-2004)</li>
+                        </ul>
+                        <ul class="text-formation">
+                            <li>Grau de Especialista em Cardiologia Pediátrica (2004)</li>
+                            <li>Licenciatura em Medicina no Instituto de Ciências Biomédicas Abel Salazar, Porto (1996)
+                            </li>
+                        </ul>
+                        <ul class="text-science">
+                            <li>É autora de vários artigos, apresentações e comunicações livres, pertenceu à comissão
+                                organizadora de várias reuniões científicas</li>
+                        </ul>
+                        <ul class="text-sociaty">
+                        </ul>
+                    </div>
                 </div>
             </div>
         </section>
@@ -219,22 +248,24 @@
         </div>
         <nav>
             <ul>
-                <li class="fade-in"><a href="index">Início</a></li>
-                <li class="fade-in"><a href="specialties">Especialidades</a></li>
-                <li class="fade-in"><a href="agreements">Convenções</a></li>
-                <li class="fade-in"><a href="contacts">Contactos</a></li>
+                <li class="fade-in"><a href="index.html">Início</a></li>
+                <li class="fade-in"><a href="specialties.html">Especialidades</a></li>
+                <li class="fade-in"><a href="agreements.html">Convenções</a></li>
+                <li class="fade-in"><a href="contacts.html">Contactos</a></li>
             </ul>
         </nav>
     </div>
     <div class="privacy-block fade-in">
-        <a href="index">Clínica Gynébe</a> &copy; <span id="copyright-year">2021</span>. <a href="privacy">Política de
+        <a href="index.html">Clínica Gynébe</a> &copy; <span id="copyright-year">2021</span>. <a
+            href="privacy.html">Política de
             Privacidade </a><br><a>Design by Francisco Araújo</a>
     </div>
 </footer>
             <script src="../js/app.js"></script>
             <script src="../js/intersectionObservers.js"></script>
             <script src="../js/headerNavbar.js"></script>
-            <script src="../js/mapPorto.js"></script>
+            <script src="../js/headerNavbarButtons.js"></script>
+            <script src="../js/cv.js"></script>
 </body>
 
 </html>
