--- a/html/gv.html
+++ b/html/gv.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>
-    Dra. Marta Baltar
+    Dra. Gabriela Vasconcellos
 </title>
 <meta charset="utf-8">
 <meta name="format-detection" content="telephone=no" />
@@ -28,7 +28,7 @@
     <header id="header">
     <div id="logo">
         <h1 class="fadeInDown">
-            <a href="index">
+            <a href="index.html">
                 <span class="second">Clínica</span>
                 <span class="first">Gynébe</span>
             </a>
@@ -45,45 +45,45 @@
         </div>
         <ul class="sf-menu">
             <li class="top">
-                <a href="index">Início</a>
+                <a href="index.html">Início</a>
                 <div class="dropdown dropdownIndex">
                     <ul>
                         <li>
-                            <i class="fas fa-user-md"></i><a href="index#wrapper2">A Nossa Missão</a>
+                            <i class="fas fa-user-md"></i><a href="index.html#wrapper2">A Nossa Missão</a>
                         </li>
                         <li>
-                            <i class="fas fa-user-friends"></i><a href="index#wrapper3">A Equipa</a>
+                            <i class="fas fa-user-friends"></i><a href="index.html#wrapper3">A Equipa</a>
                         </li>
                         <li>
-                            <i class="fas fa-hospital-user"></i><a href="index#wrapper4">Os Melhores Cuidados de
+                            <i class="fas fa-hospital-user"></i><a href="index.html#wrapper4">Os Melhores Cuidados de
                                 Saúde</a>
                         </li>
                     </ul>
                 </div>
             </li>
             <li class="top">
-                <a href="specialties">Especialidades</a>
+                <a href="specialties.html">Especialidades</a>
                 <div class="dropdown dropdownSpecialties">
                     <ul>
                         <li>
                             <i class="fas fa-female"></i>
-                            <a href="specialties#gyne">Ginecologia/Obstetrícia</a>
+                            <a href="specialties.html#gyne">Ginecologia/Obstetrícia</a>
                         </li>
                         <li>
                             <i class="fas fa-baby"></i>
-                            <a href="specialties#ped">Pediatria</a>
+                            <a href="specialties.html#ped">Pediatria</a>
                         </li>
                         <li>
                             <i class="fas fa-pills"></i>
-                            <a href="specialties#endo">Endocrinologia</a>
+                            <a href="specialties.html#endo">Endocrinologia</a>
                         </li>
                         <li>
                             <i class="fas fa-comment-medical"></i>
-                            <a href="specialties#psy">Psicologia</a>
+                            <a href="specialties.html#psy">Psicologia</a>
                         </li>
                         <li>
                             <i class="fas fa-utensils"></i>
-                            <a href="specialties#nut">Nutrição</a>
+                            <a href="specialties.html#nut">Nutrição</a>
                         </li>
                         <!-- <li>
                             <i class="fas fa-spa"></i>
@@ -93,52 +93,52 @@
                 </div>
             </li>
             <li class="top">
-                <a href="agreements">Convenções</a>
+                <a href="agreements.html">Convenções</a>
                 <div class="dropdown dropdownAgreements">
                     <ul>
                         <li><img src="../images/advanceCare_logo.png" alt="Advancecare Logo">
-                            <a href="agreements#advanceCare">AdvanceCare</a>
+                            <a href="agreements.html#advanceCare">AdvanceCare</a>
                         </li>
                         <li><img src="../images/allianz_logo.png" alt="Allianz Logo">
-                            <a href="agreements#allianz">Allianz</a>
+                            <a href="agreements.html#allianz">Allianz</a>
                         </li>
                         <li><img src="../images/fh_logo.png" alt="Future Healthcare Logo">
-                            <a href="agreements#furureHealth">Future Healthcare</a>
+                            <a href="agreements.html#furureHealth">Future Healthcare</a>
                         </li>
                         <li><img src="../images/medicare_logo.png" alt="Medicare Logo">
-                            <a href="agreements#medicare">Medicare</a>
+                            <a href="agreements.html#medicare">Medicare</a>
                         </li>
                         <li><img src="../images/medis_logo.png" alt="Médis Logo">
-                            <a href="agreements#medis">Médis</a>
+                            <a href="agreements.html#medis">Médis</a>
                         </li>
                         <li><img src="../images/rna_logo.png" alt="RNA Logo">
-                            <a href="agreements#rna">RNA</a>
+                            <a href="agreements.html#rna">RNA</a>
                         </li>
                         <li><img src="../images/sib_logo.png" alt="SAMS/SIB Logo">
-                            <a href="agreements#samsSib">SAMS/SIB</a>
+                            <a href="agreements.html#samsSib">SAMS/SIB</a>
                         </li>
                     </ul>
                 </div>
             </li>
             <li class="top">
-                <a href="gallery">Clínicas</a>
+                <a href="gallery.html">Clínicas</a>
                 <div class="dropdown dropdownGallery">
                     <ul>
-                        <li><i class="fas fa-images"></i><a href="gallery">Clínica do Porto</a></li>
-                        <li><i class="far fa-images"></i><a href="galleryST">Clínica de Santo Tirso</a>
+                        <li><i class="fas fa-images"></i><a href="gallery.html">Clínica do Porto</a></li>
+                        <li><i class="far fa-images"></i><a href="galleryST.html">Clínica de Santo Tirso</a>
                         </li>
                     </ul>
                 </div>
             </li>
             <li class="top">
-                <a href="contacts">Contactos</a>
+                <a href="contacts.html">Contactos</a>
                 <div class="dropdown dropdownContacts">
                     <ul>
                         <li><i class="fas fa-address-book"></i>
-                            <a href="contacts">Clínica do Porto</a>
+                            <a href="contacts.html">Clínica do Porto</a>
                         </li>
                         <li><i class="far fa-address-book"></i>
-                            <a href="contacts_santo_tirso">Clínica de Santo Tirso</a>
+                            <a href="contacts_santo_tirso.html">Clínica de Santo Tirso</a>
                         </li>
                     </ul>
                 </div>
@@ -171,44 +171,35 @@
         <section id="content" class="common">
             <div class="wrapper7">
                 <div class="heading1 fade-in">
-                    <h2>Dra. Marta Baltar</h2>
-                    <h3><strong>Especialidade:</strong> Psicologia</h3>
+                    <h2>Dra. Gabriela Vasconcellos</h2>
+                    <h3><strong>Especialidade:</strong> Pediatra-Neonatologista</h3>
                 </div>
                 <div class="box8-wrapper1">
                     <div class="box8 fade-in">
-                        <img src="../images/profile.png" alt="">
+                        <img src="../images/gv.jpg" alt="">
                         <div class="doctorsDescription language">
                             <i class="fas fa-globe-europe"></i>
-                            <p><strong>Idiomas:</strong> Português</p>
+                            <p><strong>Idiomas:</strong> Português, Inglês e Francês</p>
                         </div>
                         <div class="doctorsDescription sick">
                             <i class="fas fa-clipboard-list"></i>
-                            <p><strong>Doenças:</strong> Doenças do aparelho genital feminino, Gravidez,
-                                Infertilidade,
-                                Menopausa</p>
+                            <p><strong>Doenças:</strong> Icterícia Neonatal</p>
                         </div>
                         <div class="doctorsDescription apoint">
                             <i class="fas fa-stethoscope"></i>
-                            <p><strong>Consultas:</strong> </p>
+                            <p><strong>Consultas:</strong> Consulta Neonatologia - Consulta Pediatria - Consulta
+                                Pré-Natal com Pediatra - Teleconsulta Pediatria</p>
                         </div>
                         <div class="doctorsDescription areas">
                             <i class="fas fa-file-medical-alt"></i>
-                            <p><strong>Áreas de Diferenciação:</strong> Gravidez de Alto Risco; Cirurgia
-                                Ginecológica/Laparoscopia; Estudo de Infertilidade;
-                                Ecografia Ginecológica e Obstétrica</p>
+                            <p><strong>Áreas de Diferenciação:</strong> Neonatologia</p>
                         </div>
                     </div>
                 </div>
                 <div class="schedule fade-in">
                     <h3>Horario:</h3>
                     <ul>
-                        <li><strong>Segunda-feira:</strong> 9h-14h</li>
-                        <li><strong>Terça-feira:</strong> 9h-20h</li>
-                        <li><strong>Quarta-feira:</strong> 14h-20h</li>
-                        <li><strong>Quinta-feira:</strong> Encerrado (exceto para Urgências)</li>
-                        <li><strong>Sexta-feira:</strong> 09h-20h</li>
-                        <li><strong>Sábado:</strong> Encerrado (exceto para Urgências)</li>
-                        <li><strong>Domingo:</strong> Encerrado</li>
+                        <li><strong>Terça-feira:</strong> 15h30-18h30 (Clínica do Porto)</li>
                     </ul>
                 </div>
                 <div class="box9-wrapper1">
@@ -227,39 +218,41 @@
                             <h4>Sociedades Científicas</h4>
                         </div>
                         <ul class="text-activity open">
-                            <li>Exerce funções no domínio da Psicologia Clínica e da Saúde ao nível do
-                                diagnóstico psicométrico, acompanhamento psicopedagógico e psicoterapêutico
-                                de crianças, jovens e adultos no Gabinete de Psicologia Clínica (2008-2016).</li>
-                            <li>Desde 2006, é responsável pela Consulta de Psicologia na Clínica Gynébe. No
-                                âmbito da Consulta de Psicologia, e em colaboração com os profissionais que
-                                trabalham nesta clínica, tem desenvolvido actividades de avaliação/intervenção
-                                psicológica de crianças, jovens e adultos em situação de risco devido a problemas
-                                emocionais e/ou de aprendizagem, perturbações da parentalidade, problemas de
-                                infertilidade no casal, depressão pós-parto, problemas sexuais e conjugais,
-                                separação e divórcio.</li>
-                            <li>Exerceu funções no domínio da Psicologia Clínica Infantil e Juvenil ao nível do
-                                diagnóstico psicométrico, acompanhamento psicoterapêutico e psicopedagógico,
-                                na Clínica Médico-Cirúrgica do Marco de Canaveses (1989-1990).</li>
-                            <li>Participou no Programa Interministerial de Promoção do Sucesso Educativo no
-                                Ensino Básico (Ministério da Educação), sendo as modalidades de actuação e sua
-                                avaliação no domínio da dinamização psicopedagógica da comunidade, dos
-                                agentes de ensino, dos pais e dos alunos (1988-1992).</li>
-                            <li>Formação de Especialidade na área de Psicoterapia: 2o ano do Curso de Pós-
-                                Graduação pela Sociedade Portuguesa de Psicologia Clínica (1991-1993).</li>
+                            <li>Desde a titulação em Pediatria Médica que exerce actividade no sector privado,
+                                nomeadamente em clinicas, particularmente da área de apoio materno-infantil.
+                            </li>
+                            <li>Desde 2010 - Coordenação da Neonatologia do Hospital CUF Porto</li>
+                            <li>2008 - Coordenadora do Sector de Perinatologia da UAG-Mulher e da Criança do H.S.João -
+                                Porto</li>
+                            <li>2007 - Grau de Consultor da Carreira Médica Hospitalar</li>
+                            <li>2006 - Grau de Assistente Hospitalar Graduada</li>
+                            <li>Desde 2000 - Chefia de equipa de urgência de Neonatologia no mesmo Serviço</li>
+                            <li>1997- Provimento para lugar de Assistente Hospitalar de Pediatria Médica no H.S.João -
+                                Porto</li>
+                            <li>1996-1997 - Ciclo de Estudos Especiais de Neonatologia</li>
+                            <li>1992 - Estágio de Pediatria no Queen Elizabeth Hospital for Children em Londres -
+                                Inglaterra</li>
+                            <li>1991-1995 - Internato Complementar de Pediatria Médica no Hospital de S. João - Porto
+                            </li>
+                            <li>1990 - Internato Complementar de Clinica Geral e Medicina Familiar</li>
+                            <li>1988-1989 - Internato Geral no Hospital de V. N. Famalicão</li>
                         </ul>
                         <ul class="text-formation">
-                            <li>Doutoramento em Psicologia pela Faculdade de Psicologia e de Ciências da
-                                Educação da Universidade do Porto, em 2005.</li>
-                            <li>Mestrado em Psicopatologia e Psicologia Clínica pelo Instituto Superior de
-                                Psicologia Aplicada, em 1998.</li>
-                            <li>Licenciatura em Psicologia pela Faculdade de Psicologia e de Ciências da
-                                Educação da Universidade de Lisboa.</li>
+                            <li>1987 - Intercâmbio hospitalar em Cirurgia Geral - Hospital Distrital de Torino - Itália
+                            </li>
+                            <li>1986 -Intercâmbio hospitalar em Ginecologia - Hospital Universitário de Mainz - Alemanha
+                            </li>
+                            <li>1981-1987 - Licenciatura em Medicina pela Faculdade de Medicina da Universidade do Porto
+                            </li>
                         </ul>
                         <ul class="text-science">
-                            <li>Vários trabalhos de investigação, comunicações e publicações de âmbito nacional.</li>
+                            <li>Vários trabalhos de investigação, comunicações e publicações de âmbito nacional e
+                                internacional.</li>
                         </ul>
                         <ul class="text-sociaty">
-
+                            <li>Sociedade Portuguesa de Pediatria</li>
+                            <li>Sociedade Portuguesa de Neonatologia</li>
+                            <li>Sociedade Portuguesa de Doenças Metabólicas</li>
                         </ul>
                     </div>
                 </div>
@@ -282,21 +275,23 @@
         </div>
         <nav>
             <ul>
-                <li class="fade-in"><a href="index">Início</a></li>
-                <li class="fade-in"><a href="specialties">Especialidades</a></li>
-                <li class="fade-in"><a href="agreements">Convenções</a></li>
-                <li class="fade-in"><a href="contacts">Contactos</a></li>
+                <li class="fade-in"><a href="index.html">Início</a></li>
+                <li class="fade-in"><a href="specialties.html">Especialidades</a></li>
+                <li class="fade-in"><a href="agreements.html">Convenções</a></li>
+                <li class="fade-in"><a href="contacts.html">Contactos</a></li>
             </ul>
         </nav>
     </div>
     <div class="privacy-block fade-in">
-        <a href="index">Clínica Gynébe</a> &copy; <span id="copyright-year">2021</span>. <a href="privacy">Política de
+        <a href="index.html">Clínica Gynébe</a> &copy; <span id="copyright-year">2021</span>. <a
+            href="privacy.html">Política de
             Privacidade </a><br><a>Design by Francisco Araújo</a>
     </div>
 </footer>
             <script src="../js/app.js"></script>
             <script src="../js/intersectionObservers.js"></script>
             <script src="../js/headerNavbar.js"></script>
+            <script src="../js/headerNavbarButtons.js"></script>
             <script src="../js/cv.js"></script>
 </body>
 
