--- a/html/mca.html
+++ b/html/mca.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>
-    Dra. Ana Carriço
+    Dra. Manuela Calado Araújo
 </title>
 <meta charset="utf-8">
 <meta name="format-detection" content="telephone=no" />
@@ -28,7 +28,7 @@
     <header id="header">
     <div id="logo">
         <h1 class="fadeInDown">
-            <a href="index">
+            <a href="index.html">
                 <span class="second">Clínica</span>
                 <span class="first">Gynébe</span>
             </a>
@@ -45,45 +45,45 @@
         </div>
         <ul class="sf-menu">
             <li class="top">
-                <a href="index">Início</a>
+                <a href="index.html">Início</a>
                 <div class="dropdown dropdownIndex">
                     <ul>
                         <li>
-                            <i class="fas fa-user-md"></i><a href="index#wrapper2">A Nossa Missão</a>
+                            <i class="fas fa-user-md"></i><a href="index.html#wrapper2">A Nossa Missão</a>
                         </li>
                         <li>
-                            <i class="fas fa-user-friends"></i><a href="index#wrapper3">A Equipa</a>
+                            <i class="fas fa-user-friends"></i><a href="index.html#wrapper3">A Equipa</a>
                         </li>
                         <li>
-                            <i class="fas fa-hospital-user"></i><a href="index#wrapper4">Os Melhores Cuidados de
+                            <i class="fas fa-hospital-user"></i><a href="index.html#wrapper4">Os Melhores Cuidados de
                                 Saúde</a>
                         </li>
                     </ul>
                 </div>
             </li>
             <li class="top">
-                <a href="specialties">Especialidades</a>
+                <a href="specialties.html">Especialidades</a>
                 <div class="dropdown dropdownSpecialties">
                     <ul>
                         <li>
                             <i class="fas fa-female"></i>
-                            <a href="specialties#gyne">Ginecologia/Obstetrícia</a>
+                            <a href="specialties.html#gyne">Ginecologia/Obstetrícia</a>
                         </li>
                         <li>
                             <i class="fas fa-baby"></i>
-                            <a href="specialties#ped">Pediatria</a>
+                            <a href="specialties.html#ped">Pediatria</a>
                         </li>
                         <li>
                             <i class="fas fa-pills"></i>
-                            <a href="specialties#endo">Endocrinologia</a>
+                            <a href="specialties.html#endo">Endocrinologia</a>
                         </li>
                         <li>
                             <i class="fas fa-comment-medical"></i>
-                            <a href="specialties#psy">Psicologia</a>
+                            <a href="specialties.html#psy">Psicologia</a>
                         </li>
                         <li>
                             <i class="fas fa-utensils"></i>
-                            <a href="specialties#nut">Nutrição</a>
+                            <a href="specialties.html#nut">Nutrição</a>
                         </li>
                         <!-- <li>
                             <i class="fas fa-spa"></i>
@@ -93,52 +93,52 @@
                 </div>
             </li>
             <li class="top">
-                <a href="agreements">Convenções</a>
+                <a href="agreements.html">Convenções</a>
                 <div class="dropdown dropdownAgreements">
                     <ul>
                         <li><img src="../images/advanceCare_logo.png" alt="Advancecare Logo">
-                            <a href="agreements#advanceCare">AdvanceCare</a>
+                            <a href="agreements.html#advanceCare">AdvanceCare</a>
                         </li>
                         <li><img src="../images/allianz_logo.png" alt="Allianz Logo">
-                            <a href="agreements#allianz">Allianz</a>
+                            <a href="agreements.html#allianz">Allianz</a>
                         </li>
                         <li><img src="../images/fh_logo.png" alt="Future Healthcare Logo">
-                            <a href="agreements#furureHealth">Future Healthcare</a>
+                            <a href="agreements.html#furureHealth">Future Healthcare</a>
                         </li>
                         <li><img src="../images/medicare_logo.png" alt="Medicare Logo">
-                            <a href="agreements#medicare">Medicare</a>
+                            <a href="agreements.html#medicare">Medicare</a>
                         </li>
                         <li><img src="../images/medis_logo.png" alt="Médis Logo">
-                            <a href="agreements#medis">Médis</a>
+                            <a href="agreements.html#medis">Médis</a>
                         </li>
                         <li><img src="../images/rna_logo.png" alt="RNA Logo">
-                            <a href="agreements#rna">RNA</a>
+                            <a href="agreements.html#rna">RNA</a>
                         </li>
                         <li><img src="../images/sib_logo.png" alt="SAMS/SIB Logo">
-                            <a href="agreements#samsSib">SAMS/SIB</a>
+                            <a href="agreements.html#samsSib">SAMS/SIB</a>
                         </li>
                     </ul>
                 </div>
             </li>
             <li class="top">
-                <a href="gallery">Clínicas</a>
+                <a href="gallery.html">Clínicas</a>
                 <div class="dropdown dropdownGallery">
                     <ul>
-                        <li><i class="fas fa-images"></i><a href="gallery">Clínica do Porto</a></li>
-                        <li><i class="far fa-images"></i><a href="galleryST">Clínica de Santo Tirso</a>
+                        <li><i class="fas fa-images"></i><a href="gallery.html">Clínica do Porto</a></li>
+                        <li><i class="far fa-images"></i><a href="galleryST.html">Clínica de Santo Tirso</a>
                         </li>
                     </ul>
                 </div>
             </li>
             <li class="top">
-                <a href="contacts">Contactos</a>
+                <a href="contacts.html">Contactos</a>
                 <div class="dropdown dropdownContacts">
                     <ul>
                         <li><i class="fas fa-address-book"></i>
-                            <a href="contacts">Clínica do Porto</a>
+                            <a href="contacts.html">Clínica do Porto</a>
                         </li>
                         <li><i class="far fa-address-book"></i>
-                            <a href="contacts_santo_tirso">Clínica de Santo Tirso</a>
+                            <a href="contacts_santo_tirso.html">Clínica de Santo Tirso</a>
                         </li>
                     </ul>
                 </div>
@@ -171,40 +171,42 @@
         <section id="content" class="common">
             <div class="wrapper7">
                 <div class="heading1 fade-in">
-                    <h2>Dra. Ana Carriço</h2>
-                    <h3><strong>Especialidade:</strong> Cardiologia Pediátrica</h3>
+                    <h2>Dra. Manuela Calado Araújo</h2>
+                    <h3><strong>Especialidade:</strong> Ginecologia-Obstetrícia</h3>
                 </div>
                 <div class="box8-wrapper1">
                     <div class="box8 fade-in">
-                        <img src="../images/profile.png" alt="">
+                        <img src="../images/mca.jpg" alt="">
                         <div class="doctorsDescription language">
                             <i class="fas fa-globe-europe"></i>
-                            <p><strong>Idiomas:</strong> Português e Inglês</p>
+                            <p><strong>Idiomas:</strong> Português, Inglês e Espanhol</p>
                         </div>
                         <div class="doctorsDescription sick">
                             <i class="fas fa-clipboard-list"></i>
-                            <p><strong>Doenças:</strong> </p>
+                            <p><strong>Doenças:</strong> Doenças do aparelho genital feminino, Gravidez,
+                                Infertilidade,
+                                Menopausa</p>
                         </div>
                         <div class="doctorsDescription apoint">
                             <i class="fas fa-stethoscope"></i>
-                            <p><strong>Exames:</strong> Ecocardiografia Fetal e Eco-Doppler Cardíaco Fetal</p>
+                            <p><strong>Consultas:</strong> Consulta Ginecologia - Consulta Obstetrícia - Teleconsulta
+                                Ginecologia</p>
                         </div>
                         <div class="doctorsDescription areas">
                             <i class="fas fa-file-medical-alt"></i>
-                            <p><strong>Áreas de Diferenciação:</strong> medicina fetal e ecocardiografia</p>
+                            <p><strong>Áreas de Diferenciação:</strong> Gravidez de Alto Risco; Cirurgia
+                                Ginecológica/Laparoscopia; Estudo de Infertilidade;
+                                Ecografia Ginecológica e Obstétrica</p>
                         </div>
                     </div>
                 </div>
                 <div class="schedule fade-in">
                     <h3>Horario:</h3>
                     <ul>
-                        <li><strong>Segunda-feira:</strong> 9h-14h</li>
-                        <li><strong>Terça-feira:</strong> 9h-20h</li>
-                        <li><strong>Quarta-feira:</strong> 14h-20h</li>
-                        <li><strong>Quinta-feira:</strong> Encerrado (exceto para Urgências)</li>
-                        <li><strong>Sexta-feira:</strong> 09h-20h</li>
-                        <li><strong>Sábado:</strong> Encerrado (exceto para Urgências)</li>
-                        <li><strong>Domingo:</strong> Encerrado</li>
+                        <li><strong>Segunda-feira:</strong> 14h40-19h (Clínica de S.Tirso)</li>
+                        <li><strong>Terça-feira:</strong> 10h-19h (Clínica do Porto)</li>
+                        <li><strong>Quarta-feira:</strong> 9h-12h40 (Clínica de S.Tirso)</li>
+                        <li><strong>Sexta-feira:</strong> 10h-19h (Clínica do Porto)</li>
                     </ul>
                 </div>
                 <div class="box9-wrapper1">
@@ -223,21 +225,32 @@
                             <h4>Sociedades Científicas</h4>
                         </div>
                         <ul class="text-activity open">
-                            <li>Assistente Hospitalar no Hospital de Vila Nova de Gaia (desde 2008)</li>
-                            <li>Assistente Hospitalar Eventual no Hospital de São João, Porto (2004-2008)</li>
-                            <li>Cardiologista pediátrica no Hospital da Luz Arrábida</li>
-                            <li>Internato Complementar no Hospital de São João, Porto (1999-2004)</li>
+                            <li>2013 - Assistente graduado em Obstetrícia (grau de consultor)</li>
+                            <li>Desde 2003 - Diretora em Clinica Privada</li>
+                            <li>2000-2006 - Assistente em Obstetrícia, responsável pela Cirurgia Laparoscópica e
+                                Consulta de Alto Risco, Hospital de Braga</li>
+                            <li>1999-2000 - Assistente eventual de ginecologia e de obstetrícia, Hospital de Santo
+                                António, Porto</li>
+                            <li>1992-1998 - Internato complementar, Hospital de Santo António, Porto</li>
+                            <li>1990-1991 - Internato geral, Hospital de Santo António, Porto</li>
                         </ul>
                         <ul class="text-formation">
-                            <li>Grau de Especialista em Cardiologia Pediátrica (2004)</li>
-                            <li>Licenciatura em Medicina no Instituto de Ciências Biomédicas Abel Salazar, Porto (1996)
-                            </li>
+                            <li>2004 - Certificado de competência em Ecografia Fetal, Fetal Medicine Foundation
+                                Licenciatura em Medicina</li>
                         </ul>
                         <ul class="text-science">
-                            <li>É autora de vários artigos, apresentações e comunicações livres, pertenceu à comissão
-                                organizadora de várias reuniões científicas</li>
+                            <li>2004 - Assistente convidada em Obstetrícia, Faculdade de Medicina de Braga</li>
+                            <li>1994-1996 - Assistente convidada de Ginecologia e de Obstetrícia, Instituto de Ciências
+                                Biomédicas Abel Salazar (ICBAS)</li>
+                            <li>Publicações em revistas científicas</li>
+                            <li>Participações em trabalhos de investigação clinica e elaboração de protocolo</li>
+                            <li>Co-orientação em tese de doutoramento</li>
                         </ul>
                         <ul class="text-sociaty">
+                            <li>Sociedade Portuguesa de Obstetrícia e Medicina Materno Fetal</li>
+                            <li>Sociedade Portuguesa de Ginecologia</li>
+                            <li>Sociedade Portuguesa da Medicina da Reprodução</li>
+                            <li>Associação Portuguesa de Neurourologia e Uroginecologia</li>
                         </ul>
                     </div>
                 </div>
@@ -260,21 +273,23 @@
         </div>
         <nav>
             <ul>
-                <li class="fade-in"><a href="index">Início</a></li>
-                <li class="fade-in"><a href="specialties">Especialidades</a></li>
-                <li class="fade-in"><a href="agreements">Convenções</a></li>
-                <li class="fade-in"><a href="contacts">Contactos</a></li>
+                <li class="fade-in"><a href="index.html">Início</a></li>
+                <li class="fade-in"><a href="specialties.html">Especialidades</a></li>
+                <li class="fade-in"><a href="agreements.html">Convenções</a></li>
+                <li class="fade-in"><a href="contacts.html">Contactos</a></li>
             </ul>
         </nav>
     </div>
     <div class="privacy-block fade-in">
-        <a href="index">Clínica Gynébe</a> &copy; <span id="copyright-year">2021</span>. <a href="privacy">Política de
+        <a href="index.html">Clínica Gynébe</a> &copy; <span id="copyright-year">2021</span>. <a
+            href="privacy.html">Política de
             Privacidade </a><br><a>Design by Francisco Araújo</a>
     </div>
 </footer>
             <script src="../js/app.js"></script>
             <script src="../js/intersectionObservers.js"></script>
             <script src="../js/headerNavbar.js"></script>
+            <script src="../js/headerNavbarButtons.js"></script>
             <script src="../js/cv.js"></script>
 </body>
 
