--- a/html/specialties.html
+++ b/html/specialties.html
@@ -28,7 +28,7 @@
     <header id="header">
     <div id="logo">
         <h1 class="fadeInDown">
-            <a href="index">
+            <a href="index.html">
                 <span class="second">Clínica</span>
                 <span class="first">Gynébe</span>
             </a>
@@ -45,45 +45,45 @@
         </div>
         <ul class="sf-menu">
             <li class="top">
-                <a href="index">Início</a>
+                <a href="index.html">Início</a>
                 <div class="dropdown dropdownIndex">
                     <ul>
                         <li>
-                            <i class="fas fa-user-md"></i><a href="index#wrapper2">A Nossa Missão</a>
+                            <i class="fas fa-user-md"></i><a href="index.html#wrapper2">A Nossa Missão</a>
                         </li>
                         <li>
-                            <i class="fas fa-user-friends"></i><a href="index#wrapper3">A Equipa</a>
+                            <i class="fas fa-user-friends"></i><a href="index.html#wrapper3">A Equipa</a>
                         </li>
                         <li>
-                            <i class="fas fa-hospital-user"></i><a href="index#wrapper4">Os Melhores Cuidados de
+                            <i class="fas fa-hospital-user"></i><a href="index.html#wrapper4">Os Melhores Cuidados de
                                 Saúde</a>
                         </li>
                     </ul>
                 </div>
             </li>
             <li class="top">
-                <a href="specialties">Especialidades</a>
+                <a href="specialties.html">Especialidades</a>
                 <div class="dropdown dropdownSpecialties">
                     <ul>
                         <li>
                             <i class="fas fa-female"></i>
-                            <a href="specialties#gyne">Ginecologia/Obstetrícia</a>
+                            <a href="specialties.html#gyne">Ginecologia/Obstetrícia</a>
                         </li>
                         <li>
                             <i class="fas fa-baby"></i>
-                            <a href="specialties#ped">Pediatria</a>
+                            <a href="specialties.html#ped">Pediatria</a>
                         </li>
                         <li>
                             <i class="fas fa-pills"></i>
-                            <a href="specialties#endo">Endocrinologia</a>
+                            <a href="specialties.html#endo">Endocrinologia</a>
                         </li>
                         <li>
                             <i class="fas fa-comment-medical"></i>
-                            <a href="specialties#psy">Psicologia</a>
+                            <a href="specialties.html#psy">Psicologia</a>
                         </li>
                         <li>
                             <i class="fas fa-utensils"></i>
-                            <a href="specialties#nut">Nutrição</a>
+                            <a href="specialties.html#nut">Nutrição</a>
                         </li>
                         <!-- <li>
                             <i class="fas fa-spa"></i>
@@ -93,52 +93,52 @@
                 </div>
             </li>
             <li class="top">
-                <a href="agreements">Convenções</a>
+                <a href="agreements.html">Convenções</a>
                 <div class="dropdown dropdownAgreements">
                     <ul>
                         <li><img src="../images/advanceCare_logo.png" alt="Advancecare Logo">
-                            <a href="agreements#advanceCare">AdvanceCare</a>
+                            <a href="agreements.html#advanceCare">AdvanceCare</a>
                         </li>
                         <li><img src="../images/allianz_logo.png" alt="Allianz Logo">
-                            <a href="agreements#allianz">Allianz</a>
+                            <a href="agreements.html#allianz">Allianz</a>
                         </li>
                         <li><img src="../images/fh_logo.png" alt="Future Healthcare Logo">
-                            <a href="agreements#furureHealth">Future Healthcare</a>
+                            <a href="agreements.html#furureHealth">Future Healthcare</a>
                         </li>
                         <li><img src="../images/medicare_logo.png" alt="Medicare Logo">
-                            <a href="agreements#medicare">Medicare</a>
+                            <a href="agreements.html#medicare">Medicare</a>
                         </li>
                         <li><img src="../images/medis_logo.png" alt="Médis Logo">
-                            <a href="agreements#medis">Médis</a>
+                            <a href="agreements.html#medis">Médis</a>
                         </li>
                         <li><img src="../images/rna_logo.png" alt="RNA Logo">
-                            <a href="agreements#rna">RNA</a>
+                            <a href="agreements.html#rna">RNA</a>
                         </li>
                         <li><img src="../images/sib_logo.png" alt="SAMS/SIB Logo">
-                            <a href="agreements#samsSib">SAMS/SIB</a>
+                            <a href="agreements.html#samsSib">SAMS/SIB</a>
                         </li>
                     </ul>
                 </div>
             </li>
             <li class="top">
-                <a href="gallery">Clínicas</a>
+                <a href="gallery.html">Clínicas</a>
                 <div class="dropdown dropdownGallery">
                     <ul>
-                        <li><i class="fas fa-images"></i><a href="gallery">Clínica do Porto</a></li>
-                        <li><i class="far fa-images"></i><a href="galleryST">Clínica de Santo Tirso</a>
+                        <li><i class="fas fa-images"></i><a href="gallery.html">Clínica do Porto</a></li>
+                        <li><i class="far fa-images"></i><a href="galleryST.html">Clínica de Santo Tirso</a>
                         </li>
                     </ul>
                 </div>
             </li>
             <li class="top">
-                <a href="contacts">Contactos</a>
+                <a href="contacts.html">Contactos</a>
                 <div class="dropdown dropdownContacts">
                     <ul>
                         <li><i class="fas fa-address-book"></i>
-                            <a href="contacts">Clínica do Porto</a>
+                            <a href="contacts.html">Clínica do Porto</a>
                         </li>
                         <li><i class="far fa-address-book"></i>
-                            <a href="contacts_santo_tirso">Clínica de Santo Tirso</a>
+                            <a href="contacts_santo_tirso.html">Clínica de Santo Tirso</a>
                         </li>
                     </ul>
                 </div>
@@ -197,11 +197,11 @@
             <div class="wrapper5">
                 <div class="box5-wrapper1">
                     <div id="gyne" class="box5">
-                        <a href="mca">
+                        <a href="mca.html">
                             <img class="fade-in" src="../images/gyne.png" alt="">
                         </a>
                         <h3 class="h3__inset1 fade-in">
-                            <a href="mca">Ginecologia</a>
+                            <a href="mca.html">Ginecologia</a>
                         </h3>
                         <p class="fade-in">
                             O seguimento ginecológico regular desde a adolescência até a menopausa é essencial na
@@ -226,11 +226,11 @@
                         </ul>
                     </div>
                     <div id="obs" class="box5">
-                        <a href="mca">
+                        <a href="mca.html">
                             <img class="fade-in" src="../images/page3_img2.png" alt="">
                         </a>
                         <h3 class="h3__inset1 fade-in">
-                            <a href="mca">Obstetrícia</a>
+                            <a href="mca.html">Obstetrícia</a>
                         </h3>
                         <p class="fade-in">
                             A Obstetrícia faz o acompanhamento desde da pré-concepção ao pós-parto, em situações
@@ -251,11 +251,11 @@
                     </div>
 
                     <div id="ped" class="box5">
-                        <a href="gv">
+                        <a href="gv.html">
                             <img class="fade-in" src="../images/pediatrics.jpg" alt="">
                         </a>
                         <h3 class="h3__inset2 fade-in">
-                            <a href="gv">Pediatria</a>
+                            <a href="gv.html">Pediatria</a>
                             <!-- https://unsplash.com/photos/JcrysJBO8kQ -->
                         </h3>
                         <p class="fade-in">
@@ -279,11 +279,11 @@
                     </div>
 
                     <div id="endo" class="box5">
-                        <a href="lc">
+                        <a href="lc.html">
                             <img class="fade-in" src="../images/endo.jpg" alt="">
                         </a>
                         <h3 class="h3__inset3 fade-in">
-                            <a href="lc">Endocrinologia</a>
+                            <a href="lc.html">Endocrinologia</a>
                             <!-- https://unsplash.com/photos/Nqj2XWHy4K0 -->
                         </h3>
                         <p class="fade-in">A endocrinologia é a especialidade médica que se dedica ao diagnóstico e
@@ -307,11 +307,11 @@
                         </ul>
                     </div>
                     <div id="psy" class="box5">
-                        <a href="mb">
+                        <a href="mb.html">
                             <img class="fade-in" src="../images/psychologist.jpg" alt="">
                         </a>
                         <h3 class="h3__inset1 fade-in">
-                            <a href="mb">Psicologia</a>
+                            <a href="mb.html">Psicologia</a>
                         </h3>
                         <p class="fade-in">
                             Nesta consulta, destacam-se:<br>
@@ -334,9 +334,9 @@
                     </div>
                     <div id="nut" class="box5">
                         </li>
-                        <a href="ds"><img class="fade-in" src="../images/nutrition.jpg" alt=""></a>
+                        <a href="ds.html"><img class="fade-in" src="../images/nutrition.jpg" alt=""></a>
                         <h3 class="h3__inset2 fade-in">
-                            <a href="ds">Nutrição</a>
+                            <a href="ds.html">Nutrição</a>
                             <!-- https://unsplash.com/photos/QZub8Ni3x_c -->
                         </h3>
                         <p class="fade-in">
@@ -420,21 +420,23 @@
         </div>
         <nav>
             <ul>
-                <li class="fade-in"><a href="index">Início</a></li>
-                <li class="fade-in"><a href="specialties">Especialidades</a></li>
-                <li class="fade-in"><a href="agreements">Convenções</a></li>
-                <li class="fade-in"><a href="contacts">Contactos</a></li>
+                <li class="fade-in"><a href="index.html">Início</a></li>
+                <li class="fade-in"><a href="specialties.html">Especialidades</a></li>
+                <li class="fade-in"><a href="agreements.html">Convenções</a></li>
+                <li class="fade-in"><a href="contacts.html">Contactos</a></li>
             </ul>
         </nav>
     </div>
     <div class="privacy-block fade-in">
-        <a href="index">Clínica Gynébe</a> &copy; <span id="copyright-year">2021</span>. <a href="privacy">Política de
+        <a href="index.html">Clínica Gynébe</a> &copy; <span id="copyright-year">2021</span>. <a
+            href="privacy.html">Política de
             Privacidade </a><br><a>Design by Francisco Araújo</a>
     </div>
 </footer>
             <script src="../js/app.js"></script>
             <script src="../js/intersectionObservers.js"></script>
             <script src="../js/headerNavbar.js"></script>
+            <script src="../js/headerNavbarButtons.js"></script>
             <script src="../js/buttonOnSpecialties.js"></script>
 </body>
 
