--- a/html/mb.html
+++ b/html/mb.html
@@ -169,6 +169,7 @@
                           CONTENT
 =========================================================-->
         <section id="content" class="common">
+            <div class="overlay"></div>
             <div class="wrapper7">
                 <div class="heading1 fade-in">
                     <h2>Dra. Marta Baltar</h2>
@@ -183,19 +184,18 @@
                         </div>
                         <div class="doctorsDescription sick">
                             <i class="fas fa-clipboard-list"></i>
-                            <p><strong>Doenças:</strong> Doenças do aparelho genital feminino, Gravidez,
-                                Infertilidade,
-                                Menopausa</p>
+                            <p><strong>Doenças:</strong> Ansiedade e/ou depressão, Distúrbios do sono, Problemas
+                                conjugais, Depressão pós-parto, Problemas de fertilidade, Dificuldades parentais,
+                                Separação e divórcio</p>
                         </div>
                         <div class="doctorsDescription apoint">
                             <i class="fas fa-stethoscope"></i>
-                            <p><strong>Consultas:</strong> </p>
+                            <p><strong>Consultas:</strong> Consulta de Psicologia</p>
                         </div>
                         <div class="doctorsDescription areas">
                             <i class="fas fa-file-medical-alt"></i>
-                            <p><strong>Áreas de Diferenciação:</strong> Gravidez de Alto Risco; Cirurgia
-                                Ginecológica/Laparoscopia; Estudo de Infertilidade;
-                                Ecografia Ginecológica e Obstétrica</p>
+                            <p><strong>Áreas de Diferenciação:</strong> Intervenção psicoterapêutica em crianças,
+                                jovens e adultos</p>
                         </div>
                     </div>
                 </div>
@@ -210,6 +210,16 @@
                 <div class="box9-wrapper1">
                     <div class="box9 fade-in">
                         <div class="box9-background"></div>
+                        <div class="bar-holder">
+                            <div class="chevronDown"></div>
+                            <p>Atividade Clínica</p>
+                        </div>
+                        <ul class="tab-holder">
+                            <li class="activity">Atividade Clínica</li>
+                            <li class="formation">Formação Académica</li>
+                            <li class="science">Atividade Científica</li>
+                            <li class="sociaty">Sociedades Científicas</li>
+                        </ul>
                         <div class="activity">
                             <h4>Atividade Clínica</h4>
                         </div>
