--- a/html/mca.html
+++ b/html/mca.html
@@ -169,6 +169,7 @@
                           CONTENT
 =========================================================-->
         <section id="content" class="common">
+            <div class="overlay"></div>
             <div class="wrapper7">
                 <div class="heading1 fade-in">
                     <h2>Dra. Manuela Calado Araújo</h2>
@@ -194,8 +195,8 @@
                         </div>
                         <div class="doctorsDescription areas">
                             <i class="fas fa-file-medical-alt"></i>
-                            <p><strong>Áreas de Diferenciação:</strong> Gravidez de Alto Risco; Cirurgia
-                                Ginecológica/Laparoscopia; Estudo de Infertilidade;
+                            <p><strong>Áreas de Diferenciação:</strong> Gravidez de Alto Risco, Cirurgia
+                                Ginecológica / Laparoscopia, Estudo de Infertilidade,
                                 Ecografia Ginecológica e Obstétrica</p>
                         </div>
                     </div>
@@ -212,6 +213,16 @@
                 <div class="box9-wrapper1">
                     <div class="box9 fade-in">
                         <div class="box9-background"></div>
+                        <div class="bar-holder">
+                            <div class="chevronDown"></div>
+                            <p>Atividade Clínica</p>
+                        </div>
+                        <ul class="tab-holder">
+                            <li class="activity">Atividade Clínica</li>
+                            <li class="formation">Formação Académica</li>
+                            <li class="science">Atividade Científica</li>
+                            <li class="sociaty">Sociedades Científicas</li>
+                        </ul>
                         <div class="activity">
                             <h4>Atividade Clínica</h4>
                         </div>
