--- a/html/ac.html
+++ b/html/ac.html
@@ -169,6 +169,7 @@
                           CONTENT
 =========================================================-->
         <section id="content" class="common">
+            <div class="overlay"></div>
             <div class="wrapper7">
                 <div class="heading1 fade-in">
                     <h2>Dra. Ana Carriço</h2>
@@ -183,7 +184,7 @@
                         </div>
                         <div class="doctorsDescription sick">
                             <i class="fas fa-clipboard-list"></i>
-                            <p><strong>Doenças:</strong> </p>
+                            <p><strong>Doenças:</strong> Insuficiência cardíaca</p>
                         </div>
                         <div class="doctorsDescription apoint">
                             <i class="fas fa-stethoscope"></i>
@@ -198,6 +199,16 @@
                 <div class="box9-wrapper1">
                     <div class="box9 fade-in">
                         <div class="box9-background"></div>
+                        <div class="bar-holder">
+                            <div class="chevronDown"></div>
+                            <p>Atividade Clínica</p>
+                        </div>
+                        <ul class="tab-holder">
+                            <li class="activity">Atividade Clínica</li>
+                            <li class="formation">Formação Académica</li>
+                            <li class="science">Atividade Científica</li>
+                            <li class="sociaty">Sociedades Científicas</li>
+                        </ul>
                         <div class="activity">
                             <h4>Atividade Clínica</h4>
                         </div>
